<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/holo_green_dark"
    tools:context=".RegisterActivityCompost">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Host Registration"
                android:textSize="45sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="@android:color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:text="@string/Username"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:text="@string/Password"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:text="@string/PasswordConfirm"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:text="@string/OrgName"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:text="@string/Email"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="37dp"
                android:text="@string/Address"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="196dp"
                android:text="@string/TypeOfService"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="@android:color/white"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toTopOf="@+id/linearLayout2">


            <EditText
                android:id="@+id/txtUsernameReg"
                android:layout_width="210dp"
                android:layout_height="40dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:inputType="text"
                android:background="@drawable/loginbox"
                android:layout_marginStart="165dp"
                android:layout_marginTop="120dp" />


            <EditText
                android:id="@+id/txtPasswordReg"
                android:layout_marginStart="165dp"
                android:layout_width="210dp"
                android:layout_height="40dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/loginbox"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/txtPasswordConfirm"
                android:layout_marginStart="165dp"
                android:layout_width="210dp"
                android:layout_height="40dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/loginbox"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/txtOrgName"
                android:layout_marginStart="165dp"
                android:layout_width="210dp"
                android:layout_height="40dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:inputType="text"
                android:layout_marginTop="40dp"
                android:background="@drawable/loginbox" />


            <EditText
                android:id="@+id/txtEmail"
                android:layout_marginStart="165dp"
                android:layout_width="210dp"
                android:layout_height="40dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/loginbox"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/txtAddress"
                android:layout_marginStart="165dp"
                android:layout_width="210dp"
                android:layout_height="40dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_marginTop="27dp"
                android:hint="Address Line 1"
                android:background="@drawable/loginbox"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/txtAddress2"
                android:layout_marginStart="165dp"
                android:layout_width="210dp"
                android:layout_height="40dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_marginTop="15dp"
                android:hint="Address Line 2"
                android:background="@drawable/loginbox"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/txtCity"
                android:layout_marginStart="165dp"
                android:layout_width="210dp"
                android:layout_height="40dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_marginTop="15dp"
                android:hint="City"
                android:background="@drawable/loginbox"
                android:inputType="textPostalAddress" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="155dp"
                    android:layout_marginTop="20dp">

                </Spinner>

                <Spinner
                    android:id="@+id/country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp">

                </Spinner>

            </LinearLayout>

            <Spinner
                android:id="@+id/typeOfService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="215dp"
                android:layout_marginTop="25dp">

            </Spinner>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/l">

            <Button
                android:layout_width="130dp"
                android:layout_height="60dp"
                android:layout_marginStart="50dp"
                android:onClick="registerNewUser"
                android:text="Save"
                android:background="@drawable/mainpagebtn"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:layout_marginBottom="30dp"
                android:textSize="25sp"/>

            <Button
                android:layout_width="130dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:onClick="backToLogin"
                android:text="Cancel"
                android:background="@drawable/mainpagebtn"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:layout_marginBottom="30dp"
                android:textSize="25sp"/>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>